fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ div {
   display: inline-block;
   font-size: 1.125rem;
   text-decoration: none;
-  }
+}
 
 .btn-small {
   font-size: .875rem;
@@ -28,7 +28,7 @@ div {
 
 .s, .w, .p {
   display: inline-block;
-  border: 3px;
+  border: 3px solid;
   border-radius: 8px;
   padding: .4em .75em .3em;
   text-decoration: none;
@@ -55,6 +55,10 @@ div {
 .btn-warning {
   background-color: #f33;
   color: #fff;
+}
+
+.btn:hover {
+  margin: 0;
 }
 
 .btn-primary {
